Add some basic css
To get everything looking like they are supposed to in distinct sections of the page.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="header">
-        <ul class="left">
-            <li><img class="logoimg" src="./images/logo.png"></li>
+        <ul class="list">
+            <li><img src="./images/logo.png"></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Store</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </div>
     <div class="hero">
-        <h1>Join the league of greatness</h1>
-        <p>Get in your best shape to live your best life! Unlock your latent potential along us to realize your fitness goals.</p>
+        <div class="title">Join the league of greatness</div>
+        <div class="text">Get in your best shape to live your best life! Unlock your latent potential along us to realize your fitness goals.</div>
         <button>Sign up</button>
-        <img class="mainimg" src="./images/main.jpg">
+        <img src="./images/main.jpg">
     </div>
     <div class="info">
         <div class="title">What you can expect</div>
@@ -33,12 +33,12 @@
         <div class="text">our yoga-mats</div>
     </div>
     <div class="quote">
-        <p>No man has the right to be an amateur in the matter of physical training. It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable.</p>
-        - SOCRATES 469-399 BC
+        <div class="text">No man has the right to be an amateur in the matter of physical training. It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable.</div>
+        <div class="title">- SOCRATES 469-399 BC</div> 
     </div>
     <div class="CTA">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our gym by clicking that button over there!</p>
+        <div class="title">Call to action! It's time!</div>
+        <div class="text">Sign up for our gym by clicking that button over there!</div>
         <button>Sign up</button>
     </div>
     <div class="footer">
