Set header and footer
Used flex-box layout on them to finalize, added padding to header to "center" it on page?

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header">
+        <img src="./images/logo.png">
         <ul class="list">
-            <li><img src="./images/logo.png"></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Store</a></li>
             <li><a href="#">About</a></li>
