Set hero section
I'am not sure if I am doing it "right", but at-least everything looks good so far

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </ul>
     </div>
     <div class="hero">
-        <div class="title">Join the league of greatness</div>
-        <div class="text">Get in your best shape to live your best life! Unlock your latent potential along us to realize your fitness goals.</div>
-        <button>Sign up</button>
+        <div class="left">
+            <div class="title">Join the league of greatness</div>
+            <div class="text">Get in your best shape to live your best life! Unlock your latent potential along us to realize your fitness goals.</div>
+            <button>Sign up</button>
+        </div>
         <img src="./images/main.jpg">
     </div>
     <div class="info">
