Set info section
Arranging all the cards horizontally with flex-box

--- a/index.html
+++ b/index.html
@@ -24,15 +24,25 @@
         <img src="./images/main.jpg">
     </div>
     <div class="info">
-        <div class="title">What you can expect</div>
-        <img src="./images/db.jpg">
-        <div class="text">our dumbbells</div>
-        <img src="./images/freew.jpg">
-        <div class="text">our free-weights</div> 
-        <img src="./images/mach.jpg">
-        <div class="text">our machines</div>
-        <img src="./images/yoga.jpg">
-        <div class="text">our yoga-mats</div>
+        <div class="title">What we offer</div>
+        <div class="container">
+            <div class="card">
+                <img src="./images/db.jpg">
+                <div class="text">Dumbbells: Versatile, compact, & essential for all fitness levels.</div>
+            </div>
+            <div class="card">
+                <img src="./images/freew.jpg">
+                <div class="text">Free Weights: Ultimate strength training with plates and bars.</div> 
+            </div>
+            <div class="card">
+                <img src="./images/mach.jpg">
+                <div class="text">Machines: Target specific muscles with precision.</div>
+            </div>
+            <div class="card">
+                <img src="./images/yoga.jpg">
+                <div class="text">Yoga Classes: Improve flexibility, balance, and mental-being.</div>
+            </div>
+        </div>
     </div>
     <div class="quote">
         <div class="text">No man has the right to be an amateur in the matter of physical training. It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable.</div>
