Set final call-to-action section
Now the whole page is complete, remove "display:flex;" from body wasn't doing much, add hover actions to header section.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <div class="title">- SOCRATES 469-399 BC</div> 
     </div>
     <div class="CTA">
-        <div class="title">Call to action! It's time!</div>
-        <div class="text">Sign up for our gym by clicking that button over there!</div>
+        <div class="container">
+            <div class="title">Call to action! It's time!</div>
+            <div class="text">Sign up for our gym by clicking that button over there!</div>
+        </div>
         <button>Sign up</button>
     </div>
     <div class="footer">
