Improve info section's layout for 1920x1080 res
Some minor change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="card">
                 <img src="./images/yoga.jpg">
-                <div class="text">Yoga Classes: Improve flexibility, balance, and mental-being.</div>
+                <div class="text">Yoga Classes: Improve flexibility, balance, and psyche.</div>
             </div>
         </div>
     </div>
